# vanctrl

./: Cargo.toml  README.md  app-manifest.rc  app.exe.manifest.xml  build.rs
src/: app_ui.slint  main.rs
